k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brownrook-idc
  namespace: brownrook-idc
  labels:
    app: brownrook-idc
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: brownrook-idc
  template:
    metadata:
      labels:
        app: brownrook-idc
    spec:
      imagePullSecrets:  # can remove if ever repo becomes public
        - name: ghcr-secret
      securityContext:
        runAsNonRoot: true
      containers:
        - name: brownrook-idc
          image: ghcr.io/larocquemb/brownrook-idc:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
