k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brownrook-idc
  namespace: brownrook-idc
  labels:
    app: brownrook-idc
spec:
  type: ClusterIP
  selector:
    app: brownrook-idc
  ports:
    - name: http
      port: 80
      targetPort: 8080
